tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__string__error_after_multiline.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/error_after_multiline.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
NameError(Name(Token { kind: Identifier, loc: craftinginterpreters/test/string/error_after_multiline.lox:92..95 }))
