tests/testsuite/snapshots/testsuite__craftinginterpreters__craftinginterpreters__test__string__unterminated.lox.snap
---
source: tests/testsuite/craftinginterpreters.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/string/unterminated.lox
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
LexerError { at: craftinginterpreters/test/string/unterminated.lox:40..71 }
